# gpc

./: readme.md
configuration/: config.yaml
configuration/controllers/: 3dofPID.yaml  LQR.yaml
configuration/dynamics/: simple.yaml
configuration/safety/: qpsf.yaml
gpc_core/: CMakeLists.txt
gpc_core/include/: gpc.h
gpc_core/include/gpc/: ConfigManager.hpp  ConstraintFactory.hpp  ControlSystem.h  ControllerFactory.hpp  DynamicSystemFactory.hpp  EcbfDistanceConstraint.h  EigenPrinter.hpp  GuidanceSystem.h  IActuatorCommander.hpp  IConstraint.hpp  IController.hpp  IDynamicSystem.hpp  IGoalFetcher.hpp  ISafetyFilter.hpp  IStateFetcher.hpp  InputBoxConstraint.h  LQRController.h  LinearSystem.h  PIDController.h  QpSafetyFilter.h  QpSolver.h  RateController.hpp  SafetyContext.hpp  SafetyFilterFactory.hpp  utils.hpp
gpc_core/src/: ControlSystem.cpp  EcbfDistanceConstraint.cpp  GuidanceSystem.cpp  InputBoxConstraint.cpp  LQRController.cpp  LinearSystem.cpp  PIDController.cpp  QpSafetyFilter.cpp  QpSolver.cpp
gpc_ros_interface/: CMakeLists.txt  main.cpp  package.xml
gpc_ros_interface/include/: RosCommander.h  RosGoalFetcher.h  RosStateFetcher.h
gpc_ros_interface/src/: RosCommander.cpp  RosGoalFetcher.cpp  RosStateFetcher.cpp
include/gpc/: ControlSystem.h  PIDController.h
test/: CMakeLists.txt  test.cpp
test/math/: QpSolver_Test.cpp
